--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ header {
     align-items: center;
     
 }
+
 header img {
     margin-left: 3.5rem;
     width: 12.5rem;
@@ -23,6 +24,10 @@ nav {
     font-size: 1.275rem;
     margin-right: 3.5rem;
     text-align: center;
+}
+#intro img{
+    width: 30%;
+    max-width: 55%;
 }
 nav ul {
     display: flex;
@@ -46,6 +51,38 @@ nav a {
 }
 .menuicn, #check {
     display: none;
+}
+#check:checked ~ ul {
+    left: 0;
+
+}
+
+.container {
+    /*margin-top: 3.5rem;*/
+    padding: 1.5rem;
+    background-color: yellowgreen;
+    text-align: center;
+    /*border: 1px solid black;*/
+}
+h1,h2,p {
+    margin: 22.5px;
+}
+
+.img-nav {
+    width: 100%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto auto;
+    /*max-width: 1200px;  no */
+    padding: 2% 0%;
+}
+
+
+.img-nav .nav-box img {
+    width: auto;
+    height: auto;
+    object-fit: cover;
 }
 
 /*hace que mi menu nav sea responsive, por favor no tocar*/
@@ -82,10 +119,36 @@ nav a {
         justify-content: center;
     }
     .img-nav {
-        width: 95%;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 10px;
-        grid-template-rows: 200px;
+        margin: auto;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: auto auto;
+        grid-gap: 5%;
+        /*max-width: 1200px;  no */
+        
+    }
+    .img-nav:last-child {
+        margin-bottom: 15%;
+    }
+    #intro img{
+        width: 55%;
+        max-width: 55%;
+    }
+    #kazuki {
+        width: 55%;
+    }
+}
+
+@media (max-width: 460px) {
+    .img-nav:last-child {
+        margin-bottom: 25%;
+    }
+    #intro img{
+        width: 75%;
+        max-width: 75%;
+    }
+    #kazuki {
+        width: 75%;
     }
 }
 /*hace que el menu nav sea responsive, por favor no tocar*/
@@ -102,41 +165,4 @@ nav a {
     nav ul {
         top: 73px;
     }
-}
-#check:checked ~ ul {
-    left: 0;
-
-}
-
-.container {
-    /*margin-top: 3.5rem;*/
-    padding: 1.5rem;
-    background-color: yellowgreen;
-    text-align: center;
-    /*border: 1px solid black;*/
-}
-h1,h2,p {
-    margin: 22.5px;
-}
-
-.img-nav {
-    width: 100%;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto auto;
-    grid-gap: 20px;
-    max-width: 1200px;
-    padding: 20px;
-}
-
-.img-nav .nav-box figure {
-    max-width: auto;
-    max-height: auto;
-}
-
-.img-nav .nav-box img {
-    width: auto;
-    height: auto;
-    object-fit: cover;
 }
